2001-05-12  Almer S. Tigelaar  <almer@gnome.org>

	* text.c (color_changed): Adjust signal callback for new
	by_user flag.

	* body.c (color_changed): Idem and don't change the color
	if we changed it ourselves programatically.

	* toolbar.c (color_changed): Same as for body.c.

2001-05-11  Gediminas Paulauskas <menesis@delfi.lt>

	* body.c, paragraph.c, popup.c: marked 30 strings for translation.

	* test-html-editor-control.c: initialize gettext to test
	translations also.

2001-05-09  Larry Ewing  <lewing@ximian.com>

	* GNOME_GtkHTML_Editor.xml: connect the menu item.

	* menubar.c (select_all_cb): make the new verb.

2001-05-08  Radek Doulik  <rodo@ximian.com>

	* search.c (gtk_html_search_dialog_new): s/backward search/backward

	* menubar.c: verb EditFindRegex, not EditFindRegexp

2001-05-07  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml: changed some tips as suggested by
	Aaron

2001-04-25  Radek Doulik  <rodo@ximian.com>

	* editor-control-factory.c (editor_set_format): use
	schedule_redraw

	* engine.c (impl_get_paragraph_data): update for data type change
	(impl_set_paragraph_data): likewise
	(impl_set_object_data_by_type): likewise
	(impl_run_command): return boolean value
	(impl_insert_html): new method implementation
	(impl_search_by_data): ditto
	(impl_freeze): ditto
	(impl_thaw): ditto
	(impl_undo_begin): ditto
	(impl_undo_end): ditto

	* Editor.idl: added new methods, changed data type to string

2001-04-20  Radek Doulik  <rodo@ximian.com>

	* engine.c (impl_run_command): use return value from gtk_html_editor_command

2001-04-23  Jon K Hellan  <hellan@acm.org>

	* editor-control-factory.c (editor_control_factory): Make it
	compile again.

2001-04-23  Miguel de Icaza  <miguel@ximian.com>

	* editor-control-factory.c: Do not attempt to typecast NULL
	value.

2001-04-18  Radek Doulik  <rodo@ximian.com>

	* toolbar.c (setup_color_combo): as below

	* text.c (text_properties): as below
