@@ -1,3 +1,7 @@
+2001-05-15  Radek Doulik  <rodo@ximian.com>
+
+	* added Format/HTML mode menu item to test application
+
 2001-05-12  Almer S. Tigelaar  <almer@gnome.org>
 
 	* text.c (color_changed): Adjust signal callback for new
